--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,16 @@
+//COLOR
 $color-primary: #55c57a;
 $color-primary-light: #3cdd1f;
-$color-primary-dark: #22d64f;
+$color-primary-dark: #40b95e;
+$color-grey-light-1: #f7f7f7;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+
+//FONT
+$default-font-size: 1.6rem;
+
+//Grid
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
