--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -54,6 +54,14 @@
       background-color: $color-white;
     }
   }
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
 
   &::after {
     content: '';
