Format popup section in these files in sass and css folder

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -149,14 +149,7 @@
 
   // FRONT SIDE STYLING
   &__cta {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
+    @include absCenter;
     width: 90%;
     text-align: center;
   }
