--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -97,19 +97,12 @@
       width: 1.3rem;
       height: 1.3rem;
       display: block;
-      position: absolute;
       border-radius: 50%;
       -webkit-border-radius: 50%;
       -moz-border-radius: 50%;
       -ms-border-radius: 50%;
       -o-border-radius: 50%;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      -webkit-transform: translate(-50%, -50%);
-      -moz-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-      -o-transform: translate(-50%, -50%);
+      @include absCenter;
       background-color: $color-primary;
       opacity: 0;
       transition: opacity 0.2s;
