modified footer copyright section, deleted css/concat

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,9 +2,10 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -25vh;
+  scroll-margin-top: 2rem;
 
   @include respond(tab-port) {
-    padding: 20rem 0;
+    padding: 17rem 0 25rem 0;
     margin-top: -17vh;
   }
 }
@@ -20,6 +21,7 @@
   -ms-transform: skewY(-7deg);
   -o-transform: skewY(-7deg);
   margin-top: -10rem;
+  scroll-margin-top: 2rem;
 
   & > * {
     transform: skewY(7deg);
@@ -30,24 +32,26 @@
   }
 
   @include respond(tab-port) {
-    padding: 10rem 0;
+    padding: 15rem 0;
   }
 }
 
 .section-tours {
   background-color: $color-grey-light-1;
-  padding: 25rem 0 15rem 0;
+  padding: 20rem 0 1rem 0;
   margin-top: -7rem;
+  scroll-margin-top: 2rem;
 
   @include respond(tab-port) {
-    padding: 20rem 0 3rem 0;
+    padding: 20rem 0 1rem 0;
     margin-top: -10rem;
   }
 }
 
 .section-stories {
   position: relative;
-  padding: 15rem 0;
+  padding: 10rem 0 5rem 0;
+  scroll-margin-top: 2rem;
 
   @include respond(tab-port) {
     padding: 10rem 0 2rem 0;
@@ -57,6 +61,7 @@
 .section-book {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+  scroll-margin-top: 2rem;
 
   @include respond(tab-port) {
     padding: 10rem 0;
@@ -81,8 +86,14 @@
   }
 
   @include respond(tab-port) {
-    background-image: linear-gradient(to right, rgba($color-white, 0.9) 0%, rgba($color-white, 0.9) 100%)
+    background-image: linear-gradient(rgba($color-white, 0.9) 0%, rgba($color-white, 0.9) 100%, transparent 100%),
       url(../img/nat-10.jpg);
+  }
+
+  @include respond(phone) {
+    background-image: linear-gradient(rgba($color-white, 0.9) 0%, rgba($color-white, 0.9) 100%, transparent 100%),
+      url(../img/nat-10.jpg);
+    background-size: cover;
   }
 
   &__form {
