--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,7 +14,8 @@
 
 html {
   //This defines what 1rem is
-  font-size: 62.5%; //
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 
   @include respond(tab-land) {
     // width < 1200
@@ -26,6 +27,12 @@ html {
   }
   @include respond(big-desktop) {
     font-size: 75%; //1 rem = 12, 12/16 = 75%
+  }
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+  html {
+    scroll-behavior: auto;
   }
 }
 
