--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -46,29 +46,39 @@
     -ms-transition: all 0.5s 0.2s;
     -o-transition: all 0.5s 0.2s;
 
-    // @include respond(tab-port) {
-    //   width: 100%;
-    // }
+    @include respond(tab-port) {
+      width: 100%;
+    }
+
+    @include respond(phone) {
+      width: 100%;
+    }
   }
 
   &__left {
     width: 33.33%;
     display: table-cell;
-
-    // @include respond(tab-port) {
-    //   width: 100%;
-    // }
   }
   &__right {
     width: 66.67%;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    // @include respond(phone) {
+    //   display: none;
+    // }
   }
+
   &__img {
     display: block;
     width: 100%;
+
+    @include respond(phone) {
+      height: 28rem;
+    }
   }
+
   &__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
